# skills-dataset

./: .gitignore  README.md  pyproject.toml
src/github_skills_dataset/: __init__.py  cli.py  export.py  filter.py  kaggle_metadata.py  validate.py
src/github_skills_dataset/filter/: __init__.py  config.py  filter.py  has_valid_frontmatter.py  parse_github_url.py  prompt_hash.py  truncate_content.py  validation_prompt.txt
